--- a/registration.html
+++ b/registration.html
@@ -26,32 +26,32 @@
 <div class="form-container">
     <div class="title">Registration</div>
     <div class="content">
-        <form action="#">
+        <form id="registration-form" action="#">
             <div class="user-details">
                 <div class="input-box">
 <!--                    <span class="details">Name</span>-->
                     <label>
-                        <input type="text" placeholder="Enter your name" class='input-field full-width no-border' required>
+                        <input id="name" type="text" placeholder="Enter your name" class='input-field full-width no-border' required>
                     </label>
                 </div>
                 <div class="input-box">
                     <label>
-                        <input type="text" placeholder="Enter your surname" class='input-field full-width no-border' required>
+                        <input id="surname" type="text" placeholder="Enter your surname" class='input-field full-width no-border' required>
                     </label>
                 </div>
                 <div class="input-box">
                     <label>
-                        <input type="email" placeholder="Enter your email" class='input-field full-width no-border' required>
+                        <input id="email" type="email" placeholder="Enter your email" class='input-field full-width no-border' required>
                     </label>
                 </div>
                 <div class="input-box">
                     <label>
-                        <input type="text" placeholder="Enter your phone number" class='input-field full-width no-border' required>
+                        <input id="phone" type="text" placeholder="Enter your phone number" class='input-field full-width no-border' required>
                     </label>
                 </div>
                 <div class="input-box">
                     <label>
-                        <input type="password" placeholder="Enter your password" class='input-field full-width no-border' required>
+                        <input id="password" type="password" placeholder="Enter your password" class='input-field full-width no-border' required>
                     </label>
                 </div>
                 <div class="input-box">
@@ -80,11 +80,56 @@
 <!--                    </label>-->
 <!--                </div>-->
 <!--            </div>-->
-            <div class="center-btn"><button class='primary-btn'>Register</button></div>
+            <div class="center-btn"><button type="submit" class='primary-btn'>Register</button></div>
             <div class='form-spacing'>Already registered? <a href="login.html"><span class='form-highlight'>Log in</span></a></div>
         </form>
     </div>
+    <script src="./registration.js" type="module"></script>
 </div>
+<!--<script>-->
+<!--    const SERVER_ADDRESS = 'http://127.0.0.1:5000';-->
+<!--    const form = document.getElementById("registration-form");-->
+<!--    form.addEventListener("submit", function(event) {-->
+<!--        event.preventDefault();-->
+
+<!--        const name = document.getElementById("name").value;-->
+<!--        const surname = document.getElementById("surname").value;-->
+<!--        const phone = document.getElementById("phone").value;-->
+<!--        const email = document.getElementById("email").value;-->
+<!--        const password = document.getElementById("password").value;-->
+
+<!--        const data = {-->
+<!--            "name": name,-->
+<!--            "surname": surname,-->
+<!--            "phone": phone,-->
+<!--            "email": email,-->
+<!--            "password": password-->
+<!--        };-->
+
+<!--        fetch(SERVER_ADDRESS + "/user", {-->
+<!--            method: "POST",-->
+<!--            body: JSON.stringify(data),-->
+<!--            headers: {-->
+<!--                "Content-type": "application/json; charset=UTF-8"-->
+<!--            }-->
+<!--        })-->
+<!--            .then(response => {-->
+<!--                if (!response.ok) {-->
+<!--                    throw new Error(response.status);-->
+<!--                }-->
+<!--                return response.json();-->
+<!--            })-->
+<!--            .then(data => {-->
+<!--                console.log(data);-->
+<!--                alert("Registration successful!");-->
+<!--            })-->
+<!--            .catch(error => {-->
+<!--                console.error("Error:", error);-->
+<!--                alert("Registration failed.");-->
+<!--            });-->
+<!--    });-->
+<!--</script>-->
+
 <!--<div class='form-bold-line'></div>-->
 <!--<div class='form-container'>-->
 <!--    <div class='form-window'>-->
